--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -10,6 +10,14 @@
     "inputRev?": null,
     "inherited": false}},
   {"git":
+   {"url": "https://github.com/lean-dojo/LeanInfer.git",
+    "subDir?": null,
+    "rev": "68c32fc731e11817e92298c14d0711f3faee2e78",
+    "opts": {},
+    "name": "LeanInfer",
+    "inputRev?": "v0.0.9",
+    "inherited": false}},
+  {"git":
    {"url": "https://github.com/leanprover/std4",
     "subDir?": null,
     "rev": "869c615eb10130c0637a7bc038e2b80253559913",
